@@ -44,6 +44,7 @@ lib/gecoder/interface/constraints/int_enum/count.rb -text
 lib/gecoder/interface/constraints/int_enum/distinct.rb -text
 lib/gecoder/interface/constraints/int_enum/element.rb -text
 lib/gecoder/interface/constraints/int_enum/equality.rb -text
+lib/gecoder/interface/constraints/int_enum/sort.rb -text
 lib/gecoder/interface/constraints/int_enum_constraints.rb -text
 lib/gecoder/interface/constraints/int_var_constraints.rb -text
 lib/gecoder/interface/constraints/reifiable_constraints.rb -text
@@ -67,6 +68,7 @@ specs/constraints/equality.rb -text
 specs/constraints/linear.rb -text
 specs/constraints/reification_sugar.rb -text
 specs/constraints/relation.rb -text
+specs/constraints/sort.rb -text
 specs/enum_matrix.rb -text
 specs/enum_wrapper.rb -text
 specs/int_var.rb -text
