@@ -196,6 +196,24 @@ all variables in the numeration must be equal.
 numbers.must_be.equal
 </ruby>
 
+h4. Sortedness
+
+The sortedness constraints can be used to deal with sorted arrays.
+
+<ruby>
+numbers.sorted.must == sorted_numbers
+</ruby>
+
+Where both @numbers@ and @sorted_numbers@ are integer variable enums. The 
+indices to be sorted with (i.e. the order) can also be specified (yet again
+an integer variable enum).
+
+<ruby>
+numbers.sorted_with(order).must == sorted_numbers
+</ruby>
+
+The constraint does not support negation.
+
 h3. Boolean constraints
 
 Boolean constraints are used to place constraints on boolean variables. The 
