@@ -33,3 +33,4 @@ require 'gecoder/interface/constraints/int_enum/equality'
 require 'gecoder/interface/constraints/int_enum/channel'
 require 'gecoder/interface/constraints/int_enum/element'
 require 'gecoder/interface/constraints/int_enum/count'
+require 'gecoder/interface/constraints/int_enum/sort'
