@@ -7,6 +7,7 @@
 * Added channel constraint for int enums.
 * Added element constraints (variable array access).
 * Added count constraints.
+* Added sortedness constraints.
 
 == Version 0.3.0
 
